Fixes XPCOM glue leaving behind exit routine after DLL is unloaded. r=adamlock sr=darin, a=asa, b=184548