xpcom/glue/nsMemory.cpp
@@ -39,8 +39,6 @@
 #include "nsMemory.h"
 #include "nsXPCOMPrivate.h"
 
-
-
 static nsIMemory* gMemory = nsnull;
 
 static NS_METHOD FreeGlobalMemory(void)
@@ -62,6 +60,20 @@ SetupGlobalMemory()
     return gMemory;
 }
 
+#ifdef XPCOM_GLUE
+nsresult GlueStartupMemory() 
+{
+    NS_ASSERTION(!gMemory, "bad call");
+    NS_GetMemoryManager(&gMemory);
+    NS_ASSERTION(gMemory, "can't get memory manager!");
+    return NS_OK;
+}
+
+void GlueShutdownMemory()
+{
+    NS_IF_RELEASE(gMemory);
+}
+#endif
 
 ////////////////////////////////////////////////////////////////////////////////
 // nsMemory static helper routines
